# my_corewar

./: Makefile  a.out  asm  author  corewar  out.diff  phoenix.s
champs/: Octobre_Rouge_V4.2.cor  barriere.cor  barriere.s  ex.s  jumper.cor  lde.cor  maxidef.cor  toto.cor
champs/examples/: corewar
eleonard_asm/: CMakeLists.txt  Makefile  asm
eleonard_asm/includes/: asm.h  op.h
eleonard_asm/libft/: Makefile  is_space.c
eleonard_asm/libft/includes/: libft.h
eleonard_asm/libft/srcs/: btoh.c  btoi.c  div_mod.c  ft_abs.c  ft_atoi.c  ft_bzero.c  ft_check_overlap.c  ft_freep.c  ft_htod.c  ft_isalnum.c  ft_isalpha.c  ft_isdigit.c  ft_isprint.c  ft_lstaddtoend.c  ft_lstiter.c  ft_lstnew.c  ft_memalloc.c  ft_memset.c  ft_putchar_fd.c  ft_putstr.c  ft_putstrn.c  ft_rev_binary.c  ft_strcat.c  ft_strclr.c  ft_strcpy.c  ft_strdup.c  ft_striteri.c  ft_strjoin.c  ft_strlcat.c  ft_strlen.c  ft_strmapi.c  ft_strncat.c  ft_strncpy.c  ft_strnstr.c  ft_strsub.c  get_symbol_index.c  is_space.c  only_numbers.c  only_spaces.c  pf_hex.c
eleonard_asm/srcs/: add_arg.c  add_args_code.c  add_cec.c  add_null_octets.c  add_str_to_byte_code.c  add_till_CEC.c  add_till_cec.c  asm.c  btoh.c  btoi.c  case_of_error.c  check_args.c  check_labels.c  check_name.c  convert_labels_to_numbers.c  convert_operations_to_byte_code.c  create_file.c  do_parse.c  encrypt_line.c  fill_by_zeroes.c  free_struct.c  ft_itob.c  ft_rev_binary.c  get_args.c  init_operations.c  initialize.c  only_numbers.c  op.c  pf_hex.c  print_func.c  read_line.c  read_operation.c  recursive_power.c  skip_whitespaces.c  wrong_end_of_line.c
ft_printf/: Makefile
ft_printf/includes/: ft_printf.h
ft_printf/libft/: Makefile
ft_printf/libft/srcs/: btoh.c  (+49 more)
ft_printf/srcs/: arg_and_opt_lists.c  arg_and_opt_lists_add.c  check_options.c  color.c  do_b_option.c  do_c_option.c  do_check_soption.c  do_date_option.c  do_e_option.c  do_e_option_shift.c  do_f_decimal_print.c  do_f_option.c  do_file_option.c  do_g_option.c  do_get_snum.c  do_iarray.c  do_iarray_sort.c  do_int_option.c  do_nprints.c  do_oxx_option.c  do_p_option.c  do_print_utils.c  do_s_option.c  do_toptions.c  double_parse.c  double_parse_add.c  float_parse.c  ft_itoa_base.c  ft_litoa_base.c  ft_math.c  ft_printf.c  ft_printf_add.c  ft_putstrn.c  ft_ulitoa_base.c  get_next_line.c  la_add.c  la_cmp.c  la_copy.c  la_count.c  la_create.c  (+11 more)
includes/: asm.h  corewar.h  cw_game.h  op.h
srcs_asm/: add_arg.c  add_args_code.c  add_cec.c  add_str_to_byte_code.c  asm.c  case_of_error.c  check_args.c  check_name_and_comment.c  convert_labels_to_numbers.c  convert_operations_to_byte_code.c  create_file.c  do_parse.c  encrypt_line.c  free_struct.c  get_args.c  getter.c  have_end_quote.c  initialize.c  only_spaces.c  print_func.c  put_after_quote.c  read_.c  read_line.c  read_operation.c
srcs_vm/: cw_arena.c  cw_args.c  cw_bitwise.c  cw_carriage_creation.c  cw_check_code_inner_cycle.c  cw_commands.c  cw_display.c  cw_game.c  cw_game_inner_cycle.c  cw_operations_1.c  cw_operations_2.c  cw_operations_3.c  cw_operations_4.c  cw_player.c  cw_player_parse.c  err_exit.c  ft_isint.c  main.c  main_wrap.c  op.c
(+1 files in other folders)
